# tas

./: .gitignore  Dockerfile  Procfile  app.json  config.py  heroku.yml  readme.md  requirements.txt  server.py  setup.cfg  setup.py
.github/workflows/: ci.yml  deployment.yml  test.yml
docs/: demo.csv  readme.md
engines/: java
scripts/: run.sh  runner.sh  tas-action.js
srv/: __init__.py  file.py  helper.py  root.py
srv/docs/: demo.csv
tests/: conftest.py  test_factory.py  test_upload.py
tests/stub/: random-file.txt
