[metadata]
name = tas
version = 1.0.0
maintainer = chukwuanu
maintainer_email = mail@chukwuanu.com
description = The She Code Africa Test Assessment Server.

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpath = tests

[coverage:run]
branch = True
source = srv
